[tool.poetry]
name = "personality-quiz"
version = "0.1.0"
description = "Flask app to make you take a personality quiz and then graph the output"
authors = ["Vasundhara <vasundhara131719@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.7.10"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
